@@ -8,6 +8,8 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 
 Bug fixes:
 
+- Allow a GeoJSON collection's layer name to be set on opening in write mode
+  (#).
 - The legacy crs.py module which was shadowed by the new crs.pyx module has
   been deleted (#1344).
 - Python 3.8 has been added back to the list of supported versions and
